--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,6 @@ jobs:
       - name: 创建包
         uses: BigWigsMods/packager@master
         with:
-          args: -g bcc
+          args: -g wrath
         env:
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
