--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,15 +10,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
-      - name: 拉取分支
+      - name: Clone project
         uses: actions/checkout@v1
         with:
           fetch-depth: 50
 
-      - name: 创建包
-        uses: BigWigsMods/packager@master
-        with:
-          args: -g wrath
-        env:
-          GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
+      - name: Package and release
+        uses: BigWigsMods/packager@v2
