--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,12 @@
-name: Package and build release versions
+name: Package and release
 
 on:
   push:
     tags:
       - '**'
 
-
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
 
     env:
@@ -15,9 +14,9 @@ jobs:
 
     steps:
       - name: Clone project
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
         with:
-          fetch-depth: 50
+          fetch-depth: 0
 
       - name: Package and release
         uses: BigWigsMods/packager@v2
